[package]
name = "ransid"
description = "Rust ANSI Driver"
repository = "https://github.com/jackpot51/ransid"
version = "0.4.7"
license-file = "LICENSE"
readme = "README.md"
keywords = ["redox", "ansi"]
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[lib]
name = "ransid"
path = "src/lib.rs"

[dependencies]
log = "0.4"
vte = "0.3"
