[package]
name = "ransid"
description = "Rust ANSI Driver"
repository = "https://gitlab.redox-os.org/redox-os/ransid"
version = "0.5.0"
license = "MIT"
readme = "README.md"
keywords = ["redox", "ansi"]
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[lib]
name = "ransid"
path = "src/lib.rs"

[dependencies]
log = "0.4"
vte = "0.8"
